@@ -1,13 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD service-manager-0.ebuild 884 SHA256 a989c70e810f47fc4f14333909bafa336b5281d819432cacdadcf1c402e69f79 SHA512 446e83f4903b7feecc59e8da01a57500bf03ce0f910a55c653c382fe6ce67bd23605f648cd1d2b47862eae2a89ba960a8c6b67773d70a7935a6573f99dee6567 WHIRLPOOL f770b8d4a9bc1f2f30eb7d5676f3c22837856399aeeb4c21f56ebd9b258da6ede450458c378191b11bcdca6b2366c776bedfbdd2f415029f866f3c060f7245cf
-MISC ChangeLog 914 SHA256 98b9128d3638df23424e7f01198c753f42f534a631328e5f7786e0f9e8467f2e SHA512 dcd6a5f5768541e3ac7aaceba57c1796b350a0836e08fc4b0bd76d98de8942d28ac3a05f45c4d13fd5a161f1b82df7850aa49f56a3aff2fb8a9f0e67655b364b WHIRLPOOL 27fd63e302ade9c3786fd74dde9b286589ad8a1b56c637d0b6586c073ad69fa6d7c9724a2ebf886c2d4a8cd2329e01b06a31914c20a4c715515d171a401c63f8
+EBUILD service-manager-0.ebuild 889 SHA256 5bba55f2326d2713186d2257d7e4d38e992794b9e23c10cced839e13abc16f4f SHA512 027a0a831c6ba26f4bef644aad055b748d1ec129cd5f42bf00d8b69d29135af980381c607e226e23864629861c113f5baf512ed6f155b66047d88b20e3dc863f WHIRLPOOL 2f655d17c80f4b893e8e9bc6471856d87bced83378d3460ac0e1f1fd7e7d7eb4c02e7beb22c16f61f0f9d0e0e402b70635332c875d4df1990e56b56ed41a7b46
+MISC ChangeLog 1008 SHA256 ad2675a0e7573300c290790ef24c20965025a773c6090698e185d9cb54af9ad1 SHA512 2a619c0f76dd497dfb4bb0db5af5cb35ce56ff0e0968aad0d0d4ea2c250f7a21a88e6b98f91e85385f94349d978e7952f997f9bb58e780fe1d2b49aacc5ae0b5 WHIRLPOOL e746afa54c88e3d606f9146104e11a634922674cf2878e03e582943c628418f0d5c8bc688890c12cd508d26e3b8d2b0ae4bea7c9dd5cf9a6d421fbd3872fc3a3
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (SunOS)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlH2GeQACgkQX3X2B8XHTokIJwCeKLY4sRG6w44HubvM88GQIdDI
-DE0An1hkD1PmPvqudmLB5vo1dUDhlA2v
-=Grgr
+iQIcBAEBCAAGBQJS2s1bAAoJEPGu1DbS6WIALyIQAImg9R5E+KjsOGxTv7WFZxwI
+WVzZmrJACeB6NMpxjbMC7z0TD2SUeWls5T3kNStD5GT3ZuseoynxgjpC2PN70hHw
+ozhe+K8o2p2WyU4LWNsYNKvvpOK4EQLzNlUhiijM2M28IzztJbehHwy9T6J2oqNl
+NH6vFej4ywsGlYU+9ywpqGsZTzefbGibEReZ+RlPKmG/MWSTKFe1ZwRpCpiAOr9I
+/YTygCNkpE+dXJLELGx8xBPXFnDcRPDLqIQoApK5e0WTB69H5yDJcnF1oQxfyHtH
+ImY0kL4vXnNgc07a+SrD+Lzz5DginlxGmJAxKFbwIpBosnlKUOPbVWh98mim4Iaw
+ICt5f5X4XKyWHLdJ/hzzUfg/bKdOHW0xQvfBW9rDqD732swEwIOagsOnegtU7w+y
+1URmO51K1RXkV7Xp9dZYkn64XRSm+nU+6HfYoltUAPZhB8dftKydp7cWnmLZHdfa
+oWg7qzg2Yg/M15gEUaNz2o6sVfk8uL5Ui4hsH1nvo5GV0FjXajeWbddZ/hNmaQAs
+Qk3N1cKXEAccYIntpSKzmWbYl8geFLqiGZDzod5us7B9CIJePV7v9Oc68WBzPEpl
+Yn+hHfd/zTuBnUbUWEnsDXorlqol3rukh/DXnFeOGdMqOpukHjzZOvKN3LG0cBax
+r8sKH3g3Er6/GpO/gJgP
+=zVD9
 -----END PGP SIGNATURE-----
