@@ -1,6 +1,9 @@
 # ChangeLog for virtual/service-manager
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/service-manager/ChangeLog,v 1.5 2013/07/29 07:29:39 grobian Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/service-manager/ChangeLog,v 1.6 2014/01/18 18:52:07 vapier Exp $
+
+  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> service-manager-0.ebuild:
+  Add arm64 love.
 
   29 Jul 2013; Fabian Groffen <grobian@gentoo.org> service-manager-0.ebuild:
   Fix deps for Prefix, add Prefix keywords
